# RockPaperScissors

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/rockpaperscissors/: __init__.py  champion.py  environment.py  main.py  players.py
tests/: __init__.py
